FIX: Resize Slider Image Size
Slider image width resized to 860px due to prevent horizontal scrolling

--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -275,14 +275,15 @@
     .slider-image {
       top: -85%;
       right: -13%;
-      width:860px;
+
     }
   }
 
   .content-slider.slider-small {
     .slider-image {
       top: -245px;
-      right: -490px;
+      right: -60px;
+      width:860px;
     }
   }
 
